FIAP/k8s/namespaces.yml
apiVersion: v1
kind: Namespace
metadata:
  name: auth-service-ns
---
apiVersion: v1
kind: Namespace
metadata:
  name: flag-service-ns
---
apiVersion: v1
kind: Namespace
metadata:
  name: targeting-service-ns
---
apiVersion: v1
kind: Namespace
metadata:
  name: evaluation-service-ns
---
apiVersion: v1
kind: Namespace
metadata:
  name: analytics-service-ns
